--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <div class="box">
             <div class="content">
                 <img class="icon" src="media/XD.png">
-                <div class="name">niifuji</div>
+                <div class="name">katou</div>
                 <div class="subtitle">music + coding</div>
                 <ul class="links">
-                        <li class="linkli"><a href="https://www.facebook.com/niifuji.0407/" target="_blank">facebook</a></li>
-                        <li class="linkli"><a href="https://github.com/niifuji" target="_blank">github</a></li>
-                        <li class="linkli"><a href="https://open.spotify.com/user/31hulshjneyab6uwzldoib3qe3ge?si=0d9a7e7d8d03499a" target="_blank">spotify</a></li>
+                        <li class="linkli"><a href="https://www.facebook.com/katou.0407/" target="_blank">facebook</a></li>
+                        <li class="linkli"><a href="https://github.com/katou0407" target="_blank">github</a></li>
+                        <li class="linkli"><a href="https://open.spotify.com/user/31hulshjneyab6uwzldoib3qe3ge?si=6c419d5630cd4f98" target="_blank">spotify</a></li>
                         <li class="linkli"><a href="https://youtube.com/@niifuji_0407?si=ysyCm_n5o-i9YP0U" target="_blank">youtube</a></li>
                         <li><a href="tonquoc1412@gmail.com">contact</a></li>
                 </ul>
