--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <li class="linkli"><a href="https://www.facebook.com/katou.0407/" target="_blank">facebook</a></li>
                         <li class="linkli"><a href="https://github.com/katou0407" target="_blank">github</a></li>
                         <li class="linkli"><a href="https://open.spotify.com/user/31hulshjneyab6uwzldoib3qe3ge?si=6c419d5630cd4f98" target="_blank">spotify</a></li>
-                        <li class="linkli"><a href="https://youtube.com/@niifuji_0407?si=ysyCm_n5o-i9YP0U" target="_blank">youtube</a></li>
+                        <li class="linkli"><a href="https://www.youtube.com/@katou_0407" target="_blank">youtube</a></li>
                         <li><a href="tonquoc1412@gmail.com">contact</a></li>
                 </ul>
             </div>
