--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="shortcut icon" type="page-icon" href="media/icon.png">
         <meta name="viewport" content="width=device-width, user-scalable=no">
-        <title>niifuji</title>
+        <title>katou</title>
     </head>
     <body>
         <div class="box">
