--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="shortcut icon" type="page-icon" href="media/icon.png">
-        <meta name="viewport" content="width=device-width, user-scalable=no">
-        <title>katou</title>
-    </head>
-    <body>
-        <div class="box">
-            <div class="content">
-                <img class="icon" src="media/XD.png">
-                <div class="name">katou</div>
-                <div class="subtitle">music + coding</div>
-                <ul class="links">
-                        <li class="linkli"><a href="https://www.facebook.com/katou.0407/" target="_blank">facebook</a></li>
-                        <li class="linkli"><a href="https://github.com/katou0407" target="_blank">github</a></li>
-                        <li class="linkli"><a href="https://open.spotify.com/user/31hulshjneyab6uwzldoib3qe3ge?si=6c419d5630cd4f98" target="_blank">spotify</a></li>
-                        <li class="linkli"><a href="https://www.youtube.com/@katou_0407" target="_blank">youtube</a></li>
-                        <li><a href="tonquoc1412@gmail.com">contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </body>
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" type="page-icon" href="media/icon.png">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <script src="https://kit.fontawesome.com/ca262bb4da.js" crossorigin="anonymous"></script>
+    <title>katou</title>
+</head>
+<body>
+<div class="box">
+    <div class="content">
+        <img class="icon" src="media/XD.png">
+        <div class="name">niifuji</div>
+        <div class="subtitle">music + coding</div>
+        <ul class="links">
+            <li class="linkli"><a href="https://www.facebook.com/katou.0407/" target="_blank">facebook</a></li>
+            <li class="linkli"><a href="https://github.com/frieren0407" target="_blank">github</a></li>
+            <li class="linkli"><a href="https://open.spotify.com/user/31hulshjneyab6uwzldoib3qe3ge?si=6c419d5630cd4f98" target="_blank">spotify</a></li>
+            <li class="linkli"><a href="https://www.youtube.com/@katou_0407" target="_blank">youtube</a></li>
+            <li><a href="mailto:tonquoc1412@gmail.com">contact</a></li>
+        </ul>
+    </div>
+</div>
+
 </html>
