--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="box">
     <div class="content">
-        <img class="icon" src="media/XD.png">
+        <img class="icon" src="media/icon.png">
         <div class="name">niifuji</div>
         <div class="subtitle">music + coding</div>
         <ul class="links">
