--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 <body>
 <div class="box">
     <div class="content">
-        <img class="icon" src="media/icon.png">
+        <img class="icon" src="media/icon2.png">
         <div class="name">niifuji</div>
         <div class="subtitle">music + coding</div>
         <ul class="links">
-            <li class="linkli"><a href="https://www.facebook.com/katou.0407/" target="_blank">facebook</a></li>
+            <li class="linkli"><a href="https://www.facebook.com/tquockhongsuy/" target="_blank">facebook</a></li>
             <li class="linkli"><a href="https://github.com/frieren0407" target="_blank">github</a></li>
-            <li class="linkli"><a href="https://open.spotify.com/user/31hulshjneyab6uwzldoib3qe3ge?si=6c419d5630cd4f98" target="_blank">spotify</a></li>
-            <li class="linkli"><a href="https://www.youtube.com/@katou_0407" target="_blank">youtube</a></li>
+            <li class="linkli"><a href="https://youtube.com/@frieren0407/" target="_blank">youtube</a></li>
             <li><a href="mailto:tonquoc1412@gmail.com">contact</a></li>
         </ul>
     </div>
