--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="shortcut icon" type="page-icon" href="media/icon.png">
+    <link rel="shortcut icon" type="page-icon" href="media/icon2.png">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <script src="https://kit.fontawesome.com/ca262bb4da.js" crossorigin="anonymous"></script>
-    <title>katou</title>
+    <title>alicia</title>
 </head>
 <body>
 <div class="box">
